<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/nom_joueur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nom_joueur"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:padding="20dp"
        android:textColor="@color/purple_200"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:text="@string/questionText"
        android:padding="10dp"
        />
    <Button
        android:id="@+id/reponse_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:textSize="24sp"
        android:text="@string/reponse_1"
        />
    <Button
        android:id="@+id/reponse_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:textSize="24sp"
        android:backgroundTint="@color/orange"
        android:text="@string/reponse_2"
        />
    <Button
        android:id="@+id/reponse_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:textSize="24sp"
        android:backgroundTint="@color/blue"
        android:text="@string/reponse_3"
        />
    <Button
        android:id="@+id/reponse_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:textSize="24sp"
        android:backgroundTint="@color/green"
        android:text="@string/reponse_4"
        />


</LinearLayout>