<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/titre_accueil"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:padding="10dp"
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        />

    <EditText
        android:id="@+id/nom_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/input_name"
        android:minHeight="48dp" />
    <Button
        android:id="@+id/valide_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_valide"
        android:backgroundTint="@color/orange"
        />

</LinearLayout>